[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "duo-memory"
version = "0.1.0"
description = "Dual-pool memory system: clean facts + chaotic insights, filtered by a critic gate"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
keywords = ["memory", "ai", "agents", "creativity", "chaos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
homepage = "https://github.com/yourname/duo-memory"
repository = "https://github.com/yourname/duo-memory"

[project.scripts]
duo-memory = "duo_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
