[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duo-memory"
version = "0.1.4"
description = "Dual-pool memory system: clean facts + chaotic insights, filtered by a critic gate"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Duo-Memory Contributors"}]
keywords = ["memory", "ai", "agents", "creativity", "insight", "chaos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
homepage = "https://github.com/siar765/duo-memory"
repository = "https://github.com/siar765/duo-memory"

[project.scripts]
duo-memory = "duo_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
